--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,25 @@ h1 { font-family: 'Kulim Park', sans-serif; font-weight: 700 !important; }
 .btn-outline-dark { font-family: 'Sen', sans-serif; }
 
 
+:root {
+  --primary-color: #fff; /* try #212121 also for dark mode */
+  --background-color: #212121;
+  --font: sans-serif;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background: var(--background-color);
+  font-family: var(--font);
+  display: flex;
+  justify-content: center;
+}
+
+/* Timeline Container */
 .timeline {
   background: var(--primary-color);
   margin: 20px auto;
