--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,5 +35,10 @@ h1 { font-family: 'Kulim Park', sans-serif; font-weight: 700 !important; }
 @media (min-width: 768px) { .social-icon { margin-right: 0px; margin-left: 20px; } }
 .social-icon:hover { filter: drop-shadow(0 0 0.75rem #00b0ff); text-decoration: none; }
 
+@media .IMG_8196 {
+    width: 30%;
+    height:auto;
+}
+
 .btn-outline-dark { font-family: 'Sen', sans-serif; }
 
