--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,34 +37,65 @@ h1 { font-family: 'Kulim Park', sans-serif; font-weight: 700 !important; }
 
 .btn-outline-dark { font-family: 'Comic Sans MS', sans-serif; }
 
-button {
-  --c:  #229091; /* the color*/
-  
-  box-shadow: 0 0 0 .1em inset var(--c); 
-  --_g: linear-gradient(var(--c) 0 0) no-repeat;
-  background: 
-    var(--_g) calc(var(--_p,0%) - 100%) 0%,
-    var(--_g) calc(200% - var(--_p,0%)) 0%,
-    var(--_g) calc(var(--_p,0%) - 100%) 100%,
-    var(--_g) calc(200% - var(--_p,0%)) 100%;
-  background-size: 50.5% calc(var(--_p,0%)/2 + .5%);
-  outline-offset: .1em;
-  transition: background-size .4s, background-position 0s .4s;
-}
-button:hover {
-  --_p: 100%;
-  transition: background-position .4s, background-size 0s;
-}
-button:active {
-  box-shadow: 0 0 9e9q inset #0009; 
-  background-color: var(--c);
-  color: #fff;
-}
+.rotate-180-anim
+	animation: rotate180 4s linear infinite
+@keyframes rotate180
+	0%
+		transform: rotate(0deg)
+	15%
+		transform: rotate(180deg)
+	50%
+		transform: rotate(180deg)
+	65%
+		transform: rotate(0deg)
+	100%
+		transform: rotate(0deg)
 
-button {
-  font-family: system-ui, sans-serif;
-  font-size: 1rem;
-  cursor: pointer;
+.rotate-45-anim
+	transform: rotate(-45deg)
+	animation: rotate45 4s linear infinite
+@keyframes rotate45
+	0%
+		transform: rotate(-45deg)
+	15%
+		transform: rotate(45deg)
+	50%
+		transform: rotate(45deg)
+	65%
+		transform: rotate(-45deg)
+	100%
+		transform: rotate(-45deg)
+
+.bg-anim
+	animation: changebg 2s steps(2, jump-none) infinite
+@keyframes changebg
+	from
+		background-color: #000
+	to
+		background-color: currentcolor
+	
+.white-text-anim
+	animation: changewh 2s steps(2, jump-none) infinite
+@keyframes changewh
+	from
+		color: currentcolor
+	to
+		color: #fff
+	
+.delay-1
+	animation-delay: 1s
+.delay-2
+	animation-delay: 2s
+.delay-3
+	animation-delay: 2.5s
+
+.anim-reverse
+	animation-direction: reverse
+
+.duration-5
+	animation-duration: 5s
+.duration-1
+	animation-duration: 1s
   padding: .1em .6em;
   font-weight: bold;  
   border: none;
