--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,63 +35,51 @@ h1 { font-family: 'Kulim Park', sans-serif; font-weight: 700 !important; }
 @media (min-width: 768px) { .social-icon { margin-right: 0px; margin-left: 20px; } }
 .social-icon:hover { filter: drop-shadow(0 0 0.75rem #00b0ff); text-decoration: none; }
 
-
-.button-19 {
-  appearance: button;
-  background-color: #1899D6;
-  border: solid transparent;
-  border-radius: 16px;
-  border-width: 0 0 4px;
+.button-59 {
+  align-items: center;
+  background-color: #fff;
+  border: 2px solid #000;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #000;
   cursor: pointer;
-  display: inline-block;
-  font-family: din-round,sans-serif;
-  font-size: 15px;
-  font-weight: 700;
-  letter-spacing: .8px;
-  line-height: 20px;
-  margin: 0;
-  outline: none;
-  overflow: visible;
-  padding: 13px 16px;
+  display: inline-flex;
+  fill: #000;
+  font-family: Inter,sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  height: 48px;
+  justify-content: center;
+  letter-spacing: -.8px;
+  line-height: 24px;
+  min-width: 140px;
+  outline: 0;
+  padding: 0 17px;
   text-align: center;
-  text-transform: uppercase;
-  touch-action: manipulation;
-  transform: translateZ(0);
-  transition: filter .2s;
+  text-decoration: none;
+  transition: all .3s;
   user-select: none;
   -webkit-user-select: none;
-  vertical-align: middle;
-  white-space: nowrap;
-  width: 100%;
+  touch-action: manipulation;
 }
 
-.button-19:after {
-  background-clip: padding-box;
-  background-color: #1CB0F6;
-  border: solid transparent;
-  border-radius: 16px;
-  border-width: 0 0 4px;
-  bottom: -4px;
-  content: "";
-  left: 0;
-  position: absolute;
-  right: 0;
-  top: 0;
-  z-index: -1;
+.button-59:focus {
+  color: #171e29;
 }
 
-.button-19:main,
-.button-19:focus {
-  user-select: auto;
+.button-59:hover {
+  border-color: #06f;
+  color: #06f;
+  fill: #06f;
 }
 
-.button-19:hover:not(:disabled) {
-  filter: brightness(1.1);
-  -webkit-filter: brightness(1.1);
+.button-59:active {
+  border-color: #06f;
+  color: #06f;
+  fill: #06f;
 }
 
-.button-19:disabled {
-  cursor: auto;
+@media (min-width: 768px) {
+  .button-59 {
+    min-width: 170px;
+  }
 }
