--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,15 +36,11 @@ h1 { font-family: 'Kulim Park', sans-serif; font-weight: 700 !important; }
 .social-icon:hover { filter: drop-shadow(0 0 0.75rem #00b0ff); text-decoration: none; }
 
 
-@media (min-width: 768px) {
-  .button-59 {
-    min-width: 170px;
-  }
-}
+@media (min-width: 768px) { .button-59 { min-width: 120px; } }
 .button-59 {
   align-items: center;
   background-color: #fff;
-  border: 2px solid #000;
+  border: 1.5px solid #000;
   box-sizing: border-box;
   color: #000;
   cursor: pointer;
