--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ html, body { height: 100%; color: #000; }
 .background { display: block; width: 100%; height: 100%; position: absolute; background-image: url(../Images/background.svg); background-repeat: no-repeat; background-position: right top; background-size: auto 100vh; }
 
 @media (min-width: 768px) { .height-100 { height: 100%; } }
-h1 { font-family: 'Kulim Park', sans-serif; font-weight: 700 !important; }
+h1 { font-family: 'Inter', sans-serif; font-weight: 700 !important; }
 
 .text { font-family: 'Sen', sans-serif; font-weight: 400; }
 
