--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,7 @@ h1 { font-family: 'Inter', sans-serif; font-weight: 700 !important; }
 .social-icon:hover { filter: drop-shadow(0 0 0.75rem #00b0ff); text-decoration: none; }
 
 
-@media (min-width: 768px) { .button-59 { min-width: 100px; } }
+@media (min-width: 768px) { .button-59 { min-width: 80px; } }
 .button-59 {
   align-items: center;
   background-color: #fff;
@@ -48,12 +48,12 @@ h1 { font-family: 'Inter', sans-serif; font-weight: 700 !important; }
   fill: #000;
   font-family: Inter,sans-serif;
   font-size: 16px;
-  font-weight: 400;
+  font-weight: 500;
   height: 48px;
   justify-content: center;
-  letter-spacing: -.5px;
+  letter-spacing: normal;
   line-height: 24px;
-  min-width: 120px;
+  min-width: 80px;
   outline: 0;
   padding: 0 17px;
   text-align: center;
