--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ html, body { height: 100%; color: #000; }
 @media (min-width: 768px) { .height-100 { height: 100%; } }
 h1 { font-family: 'Inter', sans-serif; font-weight: 700 !important; }
 
-.text { font-family: 'Sen', sans-serif; font-weight: 400; }
+.text { font-family: 'Inter', sans-serif; font-weight: 400; }
 
 .description { font-size: 18px; opacity: 0.7; }
 
