--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ html, body { height: 100%; color: #000; }
 @media (min-width: 768px) { .height-100 { height: 100%; } }
 h1 { font-family: 'Inter', sans-serif; font-weight: 700 !important; }
 
-.text { font-family: 'Inter', sans-serif; font-weight: 400; }
+.text { font-family: 'Sen', sans-serif; font-weight: 400; }
 
 .description { font-size: 18px; opacity: 0.7; }
 
@@ -46,9 +46,9 @@ h1 { font-family: 'Inter', sans-serif; font-weight: 700 !important; }
   cursor: pointer;
   display: inline-flex;
   fill: #000;
-  font-family: Inter,sans-serif;
+  font-family: Sen,sans-serif;
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 570;
   height: 48px;
   justify-content: center;
   letter-spacing: normal;
