--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ h1 { font-family: 'Inter', sans-serif; font-weight: 700 !important; }
   min-width: 50px;
   outline: 0;
   padding: 0 17px;
-  text-align: left;
+  text-align: right;
   text-decoration: none;
   transition: all .3s;
   user-select: none;
