--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,7 @@ h1 { font-family: 'Inter', sans-serif; font-weight: 700 !important; }
 
 .button-59:focus {
   border: none;
-  color: #171e29;
+  outline: none;
 }
 
 .button-59:hover {
