--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,6 +22,8 @@ h1 { font-family: 'Inter', sans-serif; font-weight: 700 !important; }
 
 .container-fluid { padding-left: 0px; padding-right: 0px; }
 
+.body { font-family: 'Sen', sans-serif; font-weight: 400; font=size: 12px }
+
 @media (min-width: 768px) { .height-100 { height: 100%; } }
 .bottom-img img { width: 100%; padding-top: 60px; }
 
